--- a/sr/app/page.module.css
+++ b/sr/app/page.module.css
@@ -33,7 +33,7 @@
   font-weight: 700;
   margin: 0 0 16px 0;
   /* line-height: 1.3; */
-  color: var(--global-text-color);
+  color: #ffffff;
   font-family: 'KoGaliModern', sans-serif;
 }
 
